cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(LAPACK)

SET(src
  THGeneral.c THRandom.c THBlas.c THStorage.c THStorageCopy.c THTensor.c THTensorCopy.c THTensorMath.c THTensorRandom.c THLab.c)

ADD_LIBRARY(TH SHARED ${src})

IF(LAPACK_FOUND)
  TARGET_LINK_LIBRARIES(TH ${LAPACK_LIBRARIES})
  ADD_DEFINITIONS(-DUSE_LAPACK)
  ADD_EXECUTABLE(test-lapack test-lapack.c)
  TARGET_LINK_LIBRARIES(test-lapack ${LAPACK_LIBRARIES})
ENDIF(LAPACK_FOUND)

ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main TH m)

INSTALL(TARGETS TH
          RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")
